# haxec

./: .gitmodules  Earthfile  Makefile  Makefile.win  haxe.opam
.github/workflows/: main.yml
extra/: BUILDING.md
extra/github-actions/: build-mac.yml  build-windows.yml  install-neko-unix.yml  install-ocaml-libs-windows.yml  install-ocaml-windows.yml  test-mac.yml
libs/extc/: process_stubs.c
libs/mbedtls/: mbedtls_stubs.c
src/: dune
src-json/: define.json  warning.json
src-prebuild/: prebuild.ml
src/codegen/: codegen.ml  dump.ml  fixOverrides.ml  javaModern.ml
src/compiler/: compilationCache.ml  compiler.ml  displayProcessing.ml  generate.ml  haxe.ml  server.ml
src/context/: abstractCast.ml  common.ml  memory.ml  nativeLibraries.ml  sourcemaps.ml  typecore.ml  typerPass.ml
src/core/: ast.ml  define.ml  error.ml  globals.ml  naming.ml  native.ml  tFunctions.ml  tOther.ml  tPrinting.ml  tType.ml  tUnification.ml  texpr.ml  warning.ml  withType.ml
src/filters/: ES6Ctors.ml  capturedVars.ml  exceptions.ml  filters.ml  filtersCommon.ml  localStatic.ml  localUsage.ml  renameVars.ml  tre.ml
src/generators/: gctx.ml  gencpp.ml  genhl.ml  genjs.ml  genjvm.ml  genlua.ml  genneko.ml  genphp7.ml  genpy.ml  genswf.ml  genswf9.ml  hl2c.ml  hlinterp.ml  hlopt.ml  jsSourcemap.ml
src/macro/: macroApi.ml
src/optimization/: analyzer.ml  analyzerTexpr.ml  analyzerTexprTransformer.ml  dce.ml  inline.ml  inlineConstructors.ml  optimizer.ml  optimizerTexpr.ml
std/: Std.hx  String.hx  StringTools.hx  Sys.hx  Xml.hx
tests/: Brewfile  NekoThreadTest.hx  RunCi.hx
(+273 files in other folders)
